2003-11-03  Ettore Perazzoli  <ettore@ximian.com>

	* gui/e-meeting-model.c (SELECT_NAMES_OAFID): Append "_2".
	* gui/e-select-names-editable.c (SELECT_NAMES_OAFIID): Likewise.
	* gui/e-meeting-list-view.c (SELECT_NAMES_OAFID): Likewise.
	* gui/dialogs/alarm-options.c (SELECT_NAMES_OAFID): Likewise.
	* gui/dialogs/e-delegate-dialog.c (SELECT_NAMES_OAFID): Likewise

2003-11-03  Ettore Perazzoli  <ettore@ximian.com>

	* gui/GNOME_Evolution_Calendar.server.in.in: use
	"evolution2:config_item" properties instead of
	"evolution:config_item" ones.

2003-11-03  Harry Lu  <harry.lu@sun.com>

	Fix for #50387.

	* importers/icalendar-importer.c (support_format_fn):
	Call icalcomponent_is_valid() to check whether the returned
	icalcomponent is valid.

2003-10-31  Hans Petter Jansson  <hpj@ximian.com>

	* gui/calendar-component.c (calendar_component_init): Add the webcal
	source group.

	* gui/dialogs/new-calendar.c (print_uri_noproto): Implement.
	(group_is_remote): Implement.
	(create_new_source_with_group): Implement webcal case.
	(new_calendar_dialog): Get optional location from dialog.

	* gui/dialogs/new-calendar.glade: Add location entry.

	* pcs/Makefile.am: Build http backend.

	* pcs/cal-backend-http.[ch]: Add skeleton based on cal-backend-file.

2003-10-31  Dan Winship  <danw@ximian.com>

	* cal-util/cal-util.h: Add CAL_STATIC_CAPABILITY_NO_THISANDFUTURE
	and CAL_STATIC_CAPABILITY_NO_THISANDPRIOR

	* gui/dialogs/recur-comp.c (recur_component_dialog): Add a
	CalClient argument. Use cal_client_get_static_capability to decide
	whether or not to offer THISANDFUTURE and THISANDPRIOR options

	* gui/dialogs/comp-editor.c (prompt_to_save_changes, save_cmd,
	save_close_cmd): Pass a CalClient to recur_component_dialog.

	* gui/e-day-view.c (e_day_view_finish_long_event_resize,
	e_day_view_finish_resize, e_day_view_on_editing_stopped,
	e_day_view_on_top_canvas_drag_data_received,
	e_day_view_on_main_canvas_drag_data_received): Likewise
