@@ -1,3 +1,13 @@
+2003-11-04  Bolian Yin <bolian.yin@sun.com>
+
+	* gui/e-cal-view.c: add new signal "selected_time_changed" 
+	* gui/e-day-view-main-item.c (e_day_view_main_item_class_init):
+	   a11y initialization
+	* gui/e-day-view-top-item (e_day_view_top_item_get_day_label):
+	   new public function.
+	* gui/e-day-view.c (e_day_view_ensure_rows_visible, e_day_view_update_calendar_selection_time): make static functions public
+	  (e_day_view_cursor_key_up, e_day_view_cursor_key_down, e_day_view_cursor_key_left, e_day_view_cursor_key_right): emit "selected_time_changed".
+
 2003-11-03  Ettore Perazzoli  <ettore@ximian.com>
 
 	* gui/e-meeting-model.c (SELECT_NAMES_OAFID): Append "_2".
